# codecombinator

./: Cargo.toml  README.md  build.php
core/: Cargo.toml
core/src/: operator.rs
core/src/operator/: http_api.rs  http_server.rs  saga_aggregator.rs  simple_auth.rs  sql.rs  sql_runner.rs  wasm.rs  wasmtime.rs
core/src/operator/wasm/: runtime.rs  std.rs
src/: lib.rs  operator.rs
src/operator/: add.rs  graph.rs  http_api.rs  http_server.rs  sink.rs  source.rs  sql.rs  sql_runner.rs
