[package]
name = "codecombinator"
version = "0.1.0"
authors = ["徐志强 <652732310@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tide = "0.13.0"
async-std = { version = "1.5.0", features = ["attributes"] }
arbitrary = "0.4.5"
futures-core = { version = "0.3.5", default-features = false }
async-trait = "0.1.38"
waitgroup = "0.1.1"
sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "67099d9", features = [ "mysql","json" ] }
futures = "0.3.5"
serde_json = { version = "1.0", features = ["raw_value"]}
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "*"